# Logalizer

./: .gitignore  AGENTS.md  CMakeLists.txt  Logalizer.md  README.md  appsettings.cpp  appsettings.h  fileworker.cpp  fileworker.h  formatdetector.cpp  formatdetector.h  linerecord.h  logdatabase.cpp  logdatabase.h  logformat.cpp  logformat.h  loglineparser.cpp  loglineparser.h  loglinestore.cpp  loglinestore.h  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  metadataconfig.cpp  metadataconfig.h  metadatapipeline.cpp  metadatapipeline.h  processworker.cpp  processworker.h  schemadetector.cpp  schemadetector.h  settingsdialog.cpp  settingsdialog.h  streamworker.cpp  streamworker.h  version.h.in
.github/workflows/: release.yml
formats/: tesacom.json
pkg/: logalizer.desktop
scripts/: build-release.sh  create-github-release.sh  make-appimage.sh  package-release.sh
